--- a/package.json
+++ b/package.json
@@ -13,15 +13,29 @@
     "rxjs": "7.8.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.26",
+    "@storybook/addon-interactions": "7.0.26",
+    "@storybook/addon-links": "7.0.26",
+    "@storybook/blocks": "7.0.26",
+    "@storybook/preset-create-react-app": "7.0.26",
+    "@storybook/react": "7.0.26",
+    "@storybook/react-webpack5": "7.0.26",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "typescript": "4.4.2"
+    "babel-plugin-named-exports-order": "0.0.2",
+    "prop-types": "15.8.1",
+    "storybook": "7.0.26",
+    "typescript": "4.4.2",
+    "webpack": "5.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "browserslist": [
     ">0.2%",
